# sifli-rs

.claude/skills/sifli-debug/: SKILL.md
contrib/carray2rs/: Cargo.toml  README.md  carray2rs
contrib/carray2rs/src/: main.rs
contrib/nix/: flake.nix
examples/sf32lb52x/: Cargo.toml  flash_and_debug.sh
examples/sf32lb52x/.cargo/: config.toml
examples/sf32lb52x/assets/: yanpai.raw
examples/sf32lb52x/src/: patch_data.rs  patch_data_rev_b.rs
scripts/: gen_rom_config_layout.py  gen_sram_map.py
sifli-flash-table/: Cargo.toml
sifli-flash-table/src/: lib.rs  main.rs  ptab.rs
sifli-flash-table/src/ftab/: mod.rs  structure.rs
sifli-hal/: Cargo.toml  README.md  README_zh.md  build.rs  build_serde.rs
sifli-hal/data/sf32lb52x/: dma.yaml  peripherals.yaml  pinmux_signals.yaml
sifli-hal/src/: adc.rs  aud_pll.rs  bt_hci.rs  fmt.rs  i2c.rs  lcdc.rs  lcpu.rs  lcpu_img.rs  lib.rs  lpaon.rs  macros.rs  mailbox.rs  mpi.rs  mpu.rs  patch.rs  rng.rs  syscfg.rs  time.rs  time_driver.rs  usb.rs  utils.rs
sifli-hal/src/audio/: adc.rs  codec.rs  dac.rs  mod.rs
sifli-hal/src/dma/: dma.rs  mod.rs  util.rs
sifli-hal/src/dma/ringbuffer/: mod.rs
sifli-hal/src/efuse/: mod.rs  tests.rs
sifli-hal/src/gpio/: hpsys.rs  mod.rs
sifli-hal/src/ipc/: circular_buf.rs  mod.rs
sifli-hal/src/lcpu/: config.rs  controller.rs  memory_map.rs  mod.rs  ram.rs
sifli-hal/src/mpi/: controller.rs  driver.rs  mod.rs  nor.rs  plan_final.md  plan_v1.md  plan_v2.md  shared.rs  xip.rs
sifli-hal/src/pmu/: dvfs.rs
sifli-hal/src/ram/: memory_map.rs  mod.rs  ram_slice.rs
sifli-hal/src/rcc/: clock.rs  clock_config.rs  clock_lpsys.rs  clock_read.rs  mod.rs  mux.rs  token.rs
sifli-hal/src/timer/: low_level.rs  mod.rs  simple_pwm.rs
sifli-hal/src/usart/: buffered.rs  mod.rs  ringbuffered.rs
sifli-radio/: Cargo.toml  README.md  README_zh.md
sifli-radio/src/: fmt.rs  lib.rs  memory_map.rs
sifli-radio/src/bluetooth/: config.rs  controller.rs  error.rs  hci.rs  mod.rs  nvds.rs  rom_config.rs
sifli-radio/src/bluetooth/rf_cal/: consts.rs  edr_lo.rs  mod.rs  opt.rs  rfc_cmd.rs  rfc_sram.rs  rfc_tables.rs  txdc.rs  txdc_hw.rs  vco.rs
(+14 files in other folders)
