[package]
name = "sifli-flash-table"
version = "0.1.0"
edition = "2024"
description = "Flash table generater CLI for SiFli MCUs"
categories = ["hardware-support", "embedded"]
keywords = ["sifli"]
repository = "https://github.com/OpenSiFli/sifli-rs"
homepage = "https://github.com/OpenSiFli/sifli-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.95" }
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
#serde_json = "1.0.137"
serde-hjson = "1"
